force-app/main/default/objects/ComponentMasterBlaster__c/ComponentMasterBlaster__c.object-meta.xml
<CustomObject>
    <label>ComponentMasterBlaster</label>
    <nameField>
        <label>ComponentMasterBlaster</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ComponentMasterBlaster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>