force-app/main/default/objects/ComponentMasterBlaster__c/fields/Disc__c.field-meta.xml
<CustomField>
    <fullName>Disc__c</fullName>
    <label>Disc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>