force-app/main/default/objects/ComponentMasterBlaster__c/fields/DSCVAR__c.field-meta.xml
<CustomField>
    <fullName>DSCVAR__c</fullName>
    <label>DSCVAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>