force-app/main/default/objects/ComponentMasterBlaster__c/fields/Girdle_Cover__c.field-meta.xml
<CustomField>
    <fullName>Girdle_Cover__c</fullName>
    <label>Girdle Cover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>