force-app/main/default/objects/ComponentMasterBlaster__c/fields/Handling_Support__c.field-meta.xml
<CustomField>
    <fullName>Handling_Support__c</fullName>
    <label>Handling Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>