force-app/main/default/objects/ComponentMasterBlaster__c/fields/Inlet__c.field-meta.xml
<CustomField>
    <fullName>Inlet__c</fullName>
    <label>Inlet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>