force-app/main/default/objects/ComponentMasterBlaster__c/fields/Inlet_Coating__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Coating__c</fullName>
    <label>Inlet Coating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>