force-app/main/default/objects/ComponentMasterBlaster__c/fields/Inlet_Gasket__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Gasket__c</fullName>
    <label>Inlet Gasket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>