force-app/main/default/objects/ComponentMasterBlaster__c/fields/Inlet_Liner__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Liner__c</fullName>
    <label>Inlet Liner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>