force-app/main/default/objects/ComponentMasterBlaster__c/fields/Inlet_Option_Code__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Option_Code__c</fullName>
    <label>Inlet Option Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1022</fullName>
            </value>
            <value>
                <fullName>1021</fullName>
            </value>
            <value>
                <fullName>1020</fullName>
            </value>
            <value>
                <fullName>1023b</fullName>
            </value>
            <value>
                <fullName>1019</fullName>
            </value>
            <value>
                <fullName>1018</fullName>
            </value>
            <value>
                <fullName>1008b</fullName>
            </value>
            <value>
                <fullName>1017</fullName>
            </value>
            <value>
                <fullName>1016</fullName>
            </value>
            <value>
                <fullName>1015</fullName>
            </value>
            <value>
                <fullName>1014</fullName>
            </value>
            <value>
                <fullName>1013</fullName>
            </value>
            <value>
                <fullName>1004b</fullName>
            </value>
            <value>
                <fullName>1026b</fullName>
            </value>
            <value>
                <fullName>1012</fullName>
            </value>
            <value>
                <fullName>1011</fullName>
            </value>
            <value>
                <fullName>1010</fullName>
            </value>
            <value>
                <fullName>1008</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>1007</fullName>
            </value>
            <value>
                <fullName>1006</fullName>
            </value>
            <value>
                <fullName>1028</fullName>
            </value>
            <value>
                <fullName>1027</fullName>
            </value>
            <value>
                <fullName>1005</fullName>
            </value>
            <value>
                <fullName>1026</fullName>
            </value>
            <value>
                <fullName>1004</fullName>
            </value>
            <value>
                <fullName>1003</fullName>
            </value>
            <value>
                <fullName>1025</fullName>
            </value>
            <value>
                <fullName>1002</fullName>
            </value>
            <value>
                <fullName>1024</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>