force-app/main/default/objects/ComponentMasterBlaster__c/fields/Inlet_Ring_2__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Ring_2__c</fullName>
    <label>Inlet Ring 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>