force-app/main/default/objects/ComponentMasterBlaster__c/fields/Outlet_Gasket__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Gasket__c</fullName>
    <label>Outlet Gasket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>