force-app/main/default/objects/ComponentMasterBlaster__c/fields/Outlet_Option_Code__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Option_Code__c</fullName>
    <label>Outlet Option Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>