force-app/main/default/objects/ComponentMasterBlaster__c/fields/Size_LL__c.field-meta.xml
<CustomField>
    <fullName>Size_LL__c</fullName>
    <label>Size LL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>