force-app/main/default/objects/ComponentMasterBlaster__c/fields/Top_Section_1__c.field-meta.xml
<CustomField>
    <fullName>Top_Section_1__c</fullName>
    <label>Top Section 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>