force-app/main/default/objects/ComponentMasterBlaster__c/fields/Vacuum_Support_Inlet__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_Support_Inlet__c</fullName>
    <label>Vacuum Support Inlet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>